DistributionPackages/Neos.NeosIo.ServiceOfferings/Resources/Private/Scss/Main.scss
@import 'Leaflet';
@import 'Plugins/WebExcess.OpenStreetMap/Resources/Private/Assets/Main';

.service-provider {
  section + section {
    margin-top: 3rem;
  }

  &-collection {
    margin: 3rem 0 5rem;
  }

  &__logo {
    float: right;
    max-width: 300px;
    max-height: 300px;
  }

  &__address {
    margin-bottom: 1rem;
  }

  &__contact {
    ul {
      list-style-type: none;
      padding: 0;
    }
  }

  &__map {
    width: 500px;
    max-width: 100%;
    margin-top: 5rem;
  }

  &__details,
  &__contributions {
    clear: both;
    display: flex;
    flex-wrap: wrap;

    > * {
      flex: 1 1 300px;
    }
  }

  &__badge-wrap {
    display: flex;
    flex-wrap: wrap;

    > * {
      flex: 0 1 auto;
      margin-right: 10px;
    }

    img {
      max-width: 120px;
      height: auto;
    }
  }

  &__services {
    ul {
      margin-top: .5rem;
    }
  }

  &__sponsorships {
    time {
      color: lighten(#656a71, 20%);
    }
  }

  &__awards {
    ul {
      padding: 0;
    }

    li {
      list-style-type: none;
    }

    .fa {
      color: #007fb2;
    }
  }
}

.service-providers {
  &__list {
    .grid-switcher {
      border: 1pt solid #eee;
      border-radius: 3px;
      cursor: pointer;
      display: inline-block;
      padding: 0.7rem;
      transition: border-color .1s ease-in;

      &:hover,
      &.selected {
        border-color: #666;
      }
    }

    &-entry__logo {
      display: flex;
      align-items: center;
    }

    .service-providers__badge {
      max-width: 80px;
    }

    .service-providers__grid-logo {
      display: block;
      max-width: 100px;
      max-height: 50px;
    }
    .service-providers__grid-tableview,
    .service-providers__grid-gridview {
      .service-providers__grid-row {
        &.remove-border {
          border: 0;
        }
      }
    }

    .service-providers__list-entry__awards {
      margin-left: 1rem;
      display: inline-flex;
      gap: 0.5rem;
      cursor: pointer;

      .fa {
        color: #007fb2;
      }
    }

    .service-providers__grid-tableview {
      .service-providers__grid-row {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        border-top: 1pt solid #eee;
        padding: 1rem;

        @media(max-width: 1023px) {
          grid-template-columns: none;
          grid-template-rows: 1fr;
          grid-gap: 1rem;
        }

        &.form {
          padding: 0;
          grid-template-columns: repeat(5, auto);
          justify-content: space-between;

          .service-providers__grid-cell {
            padding-top: 0;
          }
        }

        .form__item {
          display: inline-block;
          white-space: nowrap;
        }
      }
      .service-providers__grid-cell {
        z-index: 2;

        &.service-providers__header {
          padding-bottom: 0.5rem;
        }

        p:last-child {
          margin-bottom: 0;
        }
      }

    }

    .service-providers__grid-gridview {
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      grid-gap: 2rem;

      @media(max-width: 1023px) {
        grid-template-columns: repeat(2, 1fr);
      }

      @media(max-width: 768px) {
        grid-template-columns: 1fr;
      }

      .service-providers__grid-row {
        padding: 1rem;
        position: relative;
        display:grid;
        grid-gap: .3rem;
        grid-template-rows: 1fr auto auto;
        grid-template-columns: 1fr auto;
        grid-template-areas:
        'description description'
        'location badge'
        'size badge';
        border: 1px solid #eee;

        @media(min-width: 1024px) {
          padding: 2rem;
        }
      }

      .service-providers__badge {
        max-width: 80px;
      }

      .service-providers__list-entry__description {
        grid-area: description;
        overflow-x: auto;
      }

      .service-providers__list-entry__location {
        grid-area: location;
      }

      .service-providers__list-entry__size {
        grid-area: size;
      }

      .service-providers__list-entry__badge {
        grid-area: badge;
        justify-self: flex-end;
      }
    }
  }

  &__header--sortable {
    cursor: pointer;

    &:hover {
      color: black;
    }
  }
}

.marker-cluster {
  text-align: center;
  padding: .3rem .6rem;
  border-radius: 50%;
  font-size: 20px;
  background-color: #00adee;
  box-shadow: 0px 1px #26224c;
  color: white;
  text-shadow: 0 1px #26224c;
}

.leaflet-popup-content {
  address {
    margin-bottom: 1rem;
  }

  .service-provider-popup__more {
    display: block;
    margin-top: 1rem;
  }
}


@media(max-width: 1023px) {
  .hide-md-down {
    display:none;
  }
}

